--- a/rpi/Makefile
+++ b/rpi/Makefile
@@ -14,7 +14,9 @@
 # You should have received a copy of the GNU General Public License
 # along with this program. If not, see <http:--www.gnu.org/licenses/>.
 
-FRO = $(HOME)/framework-open
+ROOT = $(HOME)/Desktop
+
+FRO = $(ROOT)/framework-open
 FROINC = -I$(FRO)/include -I$(FRO)/include/utils
 FROSRC = $(FRO)/src
 
@@ -22,8 +24,6 @@ CXX_SOURCES += $(FRO)/src/risp_static.cpp
 CXX_SOURCES += $(FRO)/src/framework.cpp
 CXX_SOURCES += $(FRO)/src/processor_help.cpp
 CXX_SOURCES += $(FRO)/src/properties.cpp
-
-ROOT = $(HOME)
 
 INCLUDE = -I$(ROOT) -I../src
 
@@ -40,19 +40,19 @@ snn.o: snn.cpp ../src/msp/messages.h
 	g++ -Wall $(INCLUDE) -O3 -Wall -c snn.cpp
 
 risp.o: 
-	g++ -O3 -Wall $(FROINC) $(FROSRC)/risp.cpp
+	g++ -c -O3 -Wall $(FROINC) $(FROSRC)/risp.cpp
 
 risp_static.o: 
-	g++ -O3 -Wall $(FROINC) $(FROSRC)/risp_static.cpp
+	g++ -c -O3 -Wall $(FROINC) $(FROSRC)/risp_static.cpp
 
 framework.o: 
-	g++ -O3 -Wall $(FROINC) $(FROSRC)/framework.cpp
+	g++ -c -O3 -Wall $(FROINC) $(FROSRC)/framework.cpp
 
 processor_help.o: 
-	g++ -O3 -Wall $(FROINC) $(FROSRC)/processor_help.cpp
+	g++ -c -O3 -Wall $(FROINC) $(FROSRC)/processor_help.cpp
 
 properties.o: 
-	g++ -O3 -Wall $(FROINC) $(FROSRC)/properties.cpp
+	g++ -c -O3 -Wall $(FROINC) $(FROSRC)/properties.cpp
 
 ../src/msp/messages.h: ../msppg/messages.json
 	cd ../msppg; make install; cd ../rpi
