--- a/rpi/Makefile
+++ b/rpi/Makefile
@@ -14,8 +14,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program. If not, see <http:--www.gnu.org/licenses/>.
 
-# ROOT = $(HOME)/Desktop
-ROOT = $(HOME)
+ROOT = $(HOME)/Desktop
 
 FRO = $(ROOT)/framework-open
 FROINC = -I$(FRO)/include -I$(FRO)/include/utils
