renamed:    webots/plugins/physics/newsnn/sim_control.hpp -> attic/webots/plugins/physics/snn-climbrate/sim_control.hpp

--- a/attic/webots/plugins/physics/snn-climbrate/Makefile
+++ b/attic/webots/plugins/physics/snn-climbrate/Makefile
@@ -40,7 +40,7 @@ CXX_SOURCES += $(FRO)/src/properties.cpp
 
 # -----------------------------------------------------------------------------
 
-all: libnewsnn.so
+all: libsnn.so
 
 ### Do not modify: this includes Webots global Makefile.include
 null :=
