--- a/rpi/Makefile
+++ b/rpi/Makefile
@@ -29,11 +29,6 @@ standard: standard.cpp ../src/msp/messages.h
 simplediff: simplediff.cpp ../src/msp/messages.h
 	g++ -Wall $(INCLUDE) -O3 -Wall -o btserver simplediff.cpp
 
-loadsnn: loadsnn.cpp ../src/msp/messages.h \
-	../src/tennlab/utils.hpp ../src/tennlab/differencer.hpp
-	g++ -Wall $(FROINC) $(INCLUDE) -I../src/tennlab -O3 -Wall -o loadsnn \
-		loadsnn.cpp  $(FROOBJ) $(FROLIB)
-
 snn: snn.cpp ../src/msp/messages.h
 	g++ -Wall $(FROINC) $(INCLUDE) -I../src/tennlab -O3 -Wall -o btserver \
 		snn.cpp  $(FROOBJ) $(FROLIB)
@@ -45,4 +40,4 @@ run: btserver
 	./btserver $(FDIR)/networks/$(NETWORK).txt
 
 clean:
-	rm -f btserver loadsnn
+	rm -f btserver
