--- a/webots/controllers/controller/Makefile
+++ b/webots/controllers/controller/Makefile
@@ -53,10 +53,10 @@ runnewsnn:
 	cp ../../plugins/physics/newsnn/libnewsnn.so \
 		../../plugins/physics/custom/libcustom.so
 	webots ../../worlds/simple.wbt &
-	/usr/local/webots/webots-controller --stdout-redirect $(NAME) &
-	sleep 1
-	cd $(VIZ_DIR); \
- 	love . -i '{"source":"request","port":$(VIZ_PORT),"host":"localhost"}' \
+	/usr/local/webots/webots-controller --stdout-redirect $(NAME) #&
+#	sleep 1
+#	cd $(VIZ_DIR); \
+# 	love . -i '{"source":"request","port":$(VIZ_PORT),"host":"localhost"}' \
      	-n $(NET) --show_spike_count --set_num_screen_shot 0 \
 		--use_name_neuron \
 		'{"0":"I1","1":"I2","2":"S","3":"D1","4":"D2","5":"O","6":"S2"}' \
