Uses hard-wired difference network

--- a/webots/plugins/physics/newsnn/Makefile
+++ b/webots/plugins/physics/newsnn/Makefile
@@ -18,12 +18,13 @@ SRC = ../../../../src
 
 ROOT = $(HOME)/Desktop
 
+NET = $(ROOT)/2025-diff-network/levy/
+
 CFLAGS = -O3 -std=c++11 -Wall -Wextra
 
 CXX_SOURCES = ../support.cpp
 
-INCLUDE = -I../../../simsrc -I../../../../src -I$(ROOT) \
-		  -I$(ROOT)/tennlab-networks
+INCLUDE = -I../../../simsrc -I../../../../src -I$(ROOT) -I$(NET)
 
 all: libnewsnn.so
 
