new file:   src/control/snn.hpp

--- a/webots/controllers/controller/Makefile
+++ b/webots/controllers/controller/Makefile
@@ -52,9 +52,9 @@ runsnn:
 	cp ../../plugins/physics/snn/libsnn.so \
 		../../plugins/physics/__custom__/lib__custom__.so
 	webots ../../worlds/simple.wbt &
-	/usr/local/webots/webots-controller --stdout-redirect $(NAME) &
-	sleep 1
-	cd $(VIZ_DIR); \
+	/usr/local/webots/webots-controller --stdout-redirect $(NAME) # &
+# 	sleep 1
+# 	cd $(VIZ_DIR); \
  	love . -i '{"source":"request","port":$(VIZ_PORT),"host":"localhost"}' \
      	-n $(NET) --show_spike_count --set_num_screen_shot 0 \
 		--use_name_neuron \
