--- a/bolt/Makefile
+++ b/bolt/Makefile
@@ -109,7 +109,7 @@ standard_config:
 	ln -sf $(HOME)/.arduino15/packages/STMicroelectronics/ vendor
 	ln -sf $(ARDUINO_LIBS)/vl53l1x-arduino vendor
 	cp $(HFDIR)/src/control/standard.hpp $(HFDIR)/src/__control__.hpp
-	cp $(HFDIR)/src/system.cpp $(HFDIR)/bolt/src/
+	cp $(HFDIR)/src/system.cpp $(HFDIR)/bolt/src/__system__.cpp
 	cp $(HFDIR)/bolt/src/Kbuild.standard $(HFDIR)/bolt/src/Kbuild
 	cd $(HFDIR)/msppg; make install; cd ..
 
@@ -118,7 +118,7 @@ snn_config:
 	ln -sf $(HOME)/.arduino15/packages/STMicroelectronics/ vendor
 	ln -sf $(ARDUINO_LIBS)/vl53l1x-arduino vendor
 	cp $(HFDIR)/src/control/snn.hpp $(HFDIR)/src/__control__.hpp
-	cp $(HFDIR)/src/system.cpp $(HFDIR)/bolt/src/
+	cp $(HFDIR)/src/system.cpp $(HFDIR)/bolt/src/__system__.cpp
 	cp $(HFDIR)/bolt/src/Kbuild.standard $(HFDIR)/bolt/src/Kbuild
 	cd $(HFDIR)/msppg; make install; cd ..
 
@@ -129,7 +129,7 @@ haskell_config:
 	runhaskell -i$(HASKDIR) -i$(HASKDIR)/pids $(HASKDIR)/Pids.hs -i$(PWD)
 	mv copilot_core.c $(HFDIR)/bolt/src/copilot_core.cpp
 	mv copilot*.h $(HFDIR)/bolt/src/
-	cp $(HFDIR)/src/system.cpp $(HFDIR)/bolt/src/
+	cp $(HFDIR)/src/system.cpp $(HFDIR)/bolt/src/__system__.cpp
 	cp $(HFDIR)/src/control/haskell.hpp $(HFDIR)/src/__control__.hpp
 	cp $(HFDIR)/bolt/src/Kbuild.haskell $(HFDIR)/bolt/src/Kbuild
 	cd $(HFDIR)/msppg; make install; cd ..
