renamed:    imu/imu.ino -> bmi088/bmi088.ino

--- a/examples/tests/bmi088/Makefile
+++ b/examples/tests/bmi088/Makefile
@@ -1,4 +1,4 @@
-SKETCH = imu
+SKETCH = bmi088
 
 # FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
 FQBN = teensy:avr:teensy40
