new file:   examples/tests/makefile.include

--- a/examples/tests/led/Makefile
+++ b/examples/tests/led/Makefile
@@ -1,14 +1,3 @@
-FQBN = teensy:avr:teensy40
-
 SKETCH = led
 
-PORT = /dev/ttyACM0
-
-build: $(SKETCH).ino 
-	arduino-cli compile --fqbn $(FQBN) $(SKETCH).ino
-
-flash:
-	arduino-cli upload -p $(PORT) --fqbn $(FQBN) .
-
-edit:
-	vim $(SKETCH).ino
+include ../makefile.include
