--- a/examples/tests/motors/Makefile
+++ b/examples/tests/motors/Makefile
@@ -1,21 +1,3 @@
 SKETCH = motors
 
-PORT = /dev/ttyACM0
-
-FQBN = teensy:avr:teensy40
-
-build:
-	arduino-cli compile --libraries $(HOME)/Documents/Arduino/libraries \
-	   	--fqbn $(FQBN) $(SKETCH).ino
-
-flash:
-	arduino-cli upload -p $(PORT) --fqbn $(FQBN) .
-
-upload:
-	arduino-cli upload -p $(PORT) --fqbn $(FQBN) .
-
-edit:
-	vim $(SKETCH).ino
-
-listen:
-	miniterm.py $(PORT) 115200 --exit-char 3
+include ../makefile.include
