--- a/examples/tests/comms/send/Makefile
+++ b/examples/tests/comms/send/Makefile
@@ -1,22 +1,3 @@
 SKETCH = send
 
-FQBN = teensy:avr:teensy40
-
-PORT = /dev/ttyACM0
-#PORT = COM3
-
-LIBS = $(HOME)/Documents/Arduino/libraries
-
-SRC = ../../../src/
-
-build:
-	arduino-cli compile  --libraries ../../.. --libraries $(HOME)/Documents/Arduino/libraries \
-		--fqbn $(FQBN) $(SKETCH).ino
-
-
-flash:
-	arduino-cli upload -p $(PORT) --fqbn $(FQBN)
-
-edit:
-	vim $(SKETCH).ino
-
+include ../../makefile.include
