renamed:    tests/makefile.include -> makefile.include

--- a/examples/standard/Makefile
+++ b/examples/standard/Makefile
@@ -1,12 +1,8 @@
 SKETCH = standard
 
-FQBN = teensy:avr:teensy40
+include ../makefile.include
 
-PORT = /dev/ttyACM0
-
-LIBS = $(HOME)/Documents/Arduino/libraries
-
-SRC = ../../src/
+SRC = ../../src
 
 build:
 	cp FreeRTOSConfig.h $(SRC)
@@ -17,13 +13,3 @@ build:
 config:
 	cp $(SRC)/control/standard.hpp $(SRC)/control.hpp
 	cd ../../msppg; make install; cd ..
-
-flash:
-	arduino-cli upload -p $(PORT) --fqbn $(FQBN) .
-
-edit:
-	vim $(SKETCH).ino
-
-listen:
-	miniterm.py $(PORT) 115200 --exit-char 3 # exit on CTRL-C
-
