modified:   vl53l1.ino

--- a/examples/makefile.include
+++ b/examples/makefile.include
@@ -10,10 +10,9 @@ endif
 
 FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
 
-PORT = /dev/ttyACM0
-
 build: $(SKETCH).ino
-	arduino-cli compile --build-path build --fqbn $(FQBN) $(SKETCH).ino
+	arduino-cli compile --libraries $(HOME)/Documents/Arduino/libraries \
+		--build-path build --fqbn $(FQBN) $(SKETCH).ino
 
 flash:
 	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D build/$(SKETCH).ino.bin
