--- a/cf2/Makefile
+++ b/cf2/Makefile
@@ -3,8 +3,9 @@ SKETCH = cf2
 FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
 
 build: $(SKETCH).ino
-	arduino-cli compile --libraries $(HOME)/Documents/Arduino/libraries \
-		--build-path build --fqbn $(FQBN) $(SKETCH).ino
+	arduino-cli compile \
+	--libraries $(HOME)/Documents/Arduino/libraries --libraries ../.. \
+	--build-path build --fqbn $(FQBN) $(SKETCH).ino
 
 flash:
 	dfu-util -d 0483:5740 -a 0 -s 0x08000000:leave -D build/$(SKETCH).ino.bin
