--- a/cf2/Makefile
+++ b/cf2/Makefile
@@ -2,7 +2,7 @@ SKETCH = cf2
 
 FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
 
-build: $(SKETCH).ino
+build: $(SKETCH).ino *.cpp
 	arduino-cli compile \
 	--libraries $(HOME)/Documents/Arduino/libraries --libraries ../.. \
 	--build-path build --fqbn $(FQBN) $(SKETCH).ino
