modified:   msppg/Makefile

--- a/msppg/Makefile
+++ b/msppg/Makefile
@@ -1,6 +1,6 @@
 install: messages.json msppg.py
 	python3 msppg.py
-	cp msp.py ../client/
+	cp msp.py ../client/__msp__.py
 	cp messages.h ../src/msp/__messages__.h
 
 edit:
