--- a/bolt/main/Makefile
+++ b/bolt/main/Makefile
@@ -2,13 +2,16 @@ SKETCH = main
 
 BIN = build/$(SKETCH).ino.bin
 
+SRC = ../../src
+
 all: $(BIN)
 
 PORT = /dev/ttyACM0
 
 FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
 
-build/$(SKETCH).ino.bin: $(SKETCH).ino vapplication.c *.cpp ../../src/msp/__messages__.h
+build/$(SKETCH).ino.bin: $(SKETCH).ino vapplication.c *.cpp \
+	$(SRC)/*.hpp $(SRC)/tasks/*.hpp $(SRC)/msp/__messages__.h
 	arduino-cli compile --libraries $(HOME)/Documents/Arduino/libraries --libraries ../../.. \
 		--fqbn $(FQBN) $(SKETCH).ino --build-path ./build
 
