modified:   newbolt/Makefile

--- a/newbolt/Makefile
+++ b/newbolt/Makefile
@@ -6,6 +6,8 @@ FQBN = STMicroelectronics:stm32:GenF4:pnum=GENERIC_F405RGTX,usb=CDCgen
 
 BIN = build/$(SKETCH).ino.bin
 
+HFDIR = $(PWD)/..
+
 all : $(BIN)
 
 $(BIN): $(SKETCH).ino *.cpp 
@@ -21,3 +23,9 @@ clean:
 
 listen:
 	miniterm.py $(PORT) 115200 --exit-char 3
+
+standard_config:
+	cp $(HFDIR)/src/control/standard.hpp $(HFDIR)/src/__control__.hpp
+	cd $(HFDIR)/msppg; make install; cd ..
+
+
