--- a/tinypico/Makefile
+++ b/tinypico/Makefile
@@ -1,20 +1,27 @@
-SKETCH = tinypico
-
 FQBN = esp32:esp32:um_tinypico
 
 PORT = /dev/ttyACM0
 
-build: $(SKETCH).ino
-	arduino-cli compile --fqbn $(FQBN) $(SKETCH).ino
+SRC = ../src
+
+build: tinypico.ino *.cpp *.h $(SRC)/*.hpp $(SRC)/tasks/*.hpp \
+	$(SRC)/msp/__messages__.h
+	arduino-cli compile \
+		--libraries $(HOME)/Documents/Arduino/libraries \
+		--libraries ../.. \
+		--fqbn $(FQBN) tinypico.ino
+
+$(SRC)/msp/__messages__.h: ../msppg/messages.json
+	cd ../msppg; make install; cd ../tinypico
+
+standard_config:
+	cp $(SRC)/control/standard.hpp $(SRC)/__control__.hpp
 
 flash:
-	arduino-cli upload -p $(PORT) --fqbn $(FQBN) .
+	arduino-cli upload -p $(PORT) --fqbn $(FQBN)
 
 clean:
 	rm -rf obj
-
-edit:
-	vim $(SKETCH).ino
 
 listen:
 	miniterm.py $(PORT) 115200 --exit-char 3
